[package]
name = "fast-list"
description = "A fast, lightweight and extensible implementation of a graph data structure."
documentation = "https://docs.rs/fast-list"
readme = "README.md"
homepage = "https://github.com/henke443/fast-list"
repository = "https://github.com/henke443/fast-list"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
categories = ["data-structures", "database", "mathematics"]
keywords = ["graph", "ecs", "slotmap", "category", "database"]

[[bench]]
name = "fast_list"
harness = false

[dependencies]
slotmap = { version = "1.0" }
thiserror = "1.0.58"
specta = { version = "=2.0.0-rc.7", optional = true }
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahash"]}
rayon = { version = "1.10.0", optional = true }
rand = "0.8.5"

[features]
default = ["hashbrown",  "rayon", "std", "serde", "specta"]
rayon = ["dep:rayon"]
serde = ["dep:serde", "dep:serde_json", "slotmap/serde"]
specta = ["dep:specta", "dep:tauri-specta"]
hashbrown = ["dep:hashbrown", "hashbrown/serde"]
std = []

[dev-dependencies]
criterion = "0.5.1"
crossbeam = "0.8.4"
graphlib = "0.6.3"
petgraph = "0.6.4"



