[package]
name = "fast-list"
description = "A doubly linked list using SlotMap for improved cache locality, and to solve the ABA problem."
documentation = "https://docs.rs/fast-list"
readme = "README.md"
homepage = "https://github.com/henke443/fast-list"
repository = "https://github.com/henke443/fast-list"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
categories = ["data-structures", "database"]
keywords = ["graph", "slotmap", "data-structure", "linked-list", "list"]

[[bench]]
name = "fast_list"
harness = false

[dependencies]
slotmap = { version = "1.0" }
thiserror = "1.0.58"
hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahash"]}

[features]
default = ["hashbrown",  "std"]
hashbrown = ["dep:hashbrown"]
std = []
unstable = []

[dev-dependencies]
criterion = "0.5.1"
crossbeam = "0.8.4"
graphlib = "0.6.3"



